<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include
            android:id="@+id/decider_toolbar"
            layout="@layout/app_bar" />


    </android.support.design.widget.AppBarLayout>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_another_picture"
            android:id="@+id/take_another"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="TakeAnotherPicture"
            android:layout_marginTop="200dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_new_patient"
            android:id="@+id/add_new"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="AddToNewPatient"
            android:layout_marginTop="300dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_existing_patient"
            android:id="@+id/add_to"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="AddToExistingPatient"
            android:layout_marginTop="400dp" />
    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>