<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include
            android:id="@+id/plotter_toolbar"
            layout="@layout/app_bar" />


    </android.support.design.widget.AppBarLayout>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rootXML"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ImageHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <Button
            android:id="@+id/undo_button"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/camera_Loader"
            android:background="@color/my_blue"
            android:onClick="onBtnClicked"
            android:text="@string/undo" />

        <Button
            android:id="@+id/camera_Loader"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:background="@color/my_blue"
            android:onClick="OpenCamera"
            android:text="@string/open_camera" />


        <Button
            android:id="@+id/submit_button"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/camera_Loader"
            android:background="@color/my_blue"
            android:onClick="onBtnClicked"
            android:text="@string/submit" />
    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>